# codecrafters-shell-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  hi
cmake/: gcov_report.sh.in
src/: main.cpp
src/app/: shell_app.cpp  shell_app.hpp
src/builtins/: builtin_registry.cpp  builtin_registry.hpp
src/core/: command.hpp  parser.cpp  parser.hpp  path_resolver.cpp  path_resolver.hpp  tokenizer.cpp  tokenizer.hpp
src/execution/: process_executor.cpp  process_executor.hpp  redirection.cpp  redirection.hpp
src/history/: history_manager.cpp  history_manager.hpp
src/line_editing/: completion.cpp  completion.hpp
tests/: builtin_registry_tests.cpp  completion_tests.cpp  exception_coverage_tests.cpp  history_manager_tests.cpp  parser_tests.cpp  path_resolver_tests.cpp  process_executor_tests.cpp  redirection_tests.cpp
